Include common ancestors
* Update README

--- a/README.Rmd
+++ b/README.Rmd
@@ -39,10 +39,10 @@ library(verbalisr)
 Here is an example involving a double-cousin-like relationship:
 
 ```{r fig.keep = "none"}
-x = doubleCousins(degree1 = 1, removal1 = 1, half1 = TRUE,
-                  degree2 = 2, removal2 = 0, half2 = FALSE)
+x = doubleCousins(degree1 = 1, removal1 = 1,
+                  degree2 = 2, removal2 = 0)
 
-plot(x, hatched = leaves(x))
+plot(x, hatched = 15:16)
 ```
 
 ```{r dblcous, echo = FALSE, fig.height = 3.5, fig.width = 5, out.width = "60%"}
@@ -52,7 +52,7 @@ plot(x, hatched = leaves(x), margin = c(1,1,1,1))
 
 To get a written description of the two youngest members, we use `verbalise()`:
 ```{r}
-verbalise(x, ids = leaves(x))
+verbalise(x, ids = 15:16)
 ```
 
 
