--- a/README.Rmd
+++ b/README.Rmd
@@ -20,16 +20,17 @@ knitr::opts_chunk$set(
 
 The purpose of **verbalisr** is to describe pedigree relationships in plain language. This is often helpful in order to understand complex genealogies. Given two members of any pedigree, **verbalisr** spells out the connecting paths between them, using common terminology like *great-grandmother* and *half first cousins*. 
 
-**verbalisr** is part of the **ped suite** framework for pedigree analysis in R.
+**verbalisr** is part of the [ped suite](https://magnusdv.github.io/pedsuite/) framework for pedigree analysis in R. A good place to experiment with **verbalisr** is the online app **QuickPed** for building and analysing pedigrees. Try QuickPed here: <https://magnusdv.shinyapps.io/quickped>.
 
 ## Installation
 
-The development version of **verbalisr** can be installed from [GitHub](https://github.com/) with:
+The development version of **verbalisr** can be installed from GitHub with:
 
-``` r
+```{r, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("magnusdv/verbalisr")
 ```
+
 ## Example
 
 ```{r example}
@@ -39,20 +40,19 @@ library(verbalisr)
 Here is an example involving a double-cousin-like relationship:
 
 ```{r fig.keep = "none"}
-x = doubleCousins(degree1 = 1, removal1 = 1,
+x = doubleCousins(degree1 = 1, removal1 = 1, half1 = TRUE,
                   degree2 = 2, removal2 = 0)
 
-plot(x, hatched = 15:16)
+plot(x, hatched = 16:17)
 ```
 
 ```{r dblcous, echo = FALSE, fig.height = 3.5, fig.width = 5, out.width = "60%"}
 plot(x, hatched = leaves(x), margin = c(1,1,1,1))
 ```
 
-
-To get a written description of the two youngest members, we use `verbalise()`:
+We apply `verbalise()` to describe the relationship between the children:
 ```{r}
-verbalise(x, ids = 15:16)
+verbalise(x, ids = 16:17)
 ```
-
+This output shows that 16 and 17 are simultaneous first cousins once removed and second cousins. Below each description follows the corresponding path, with its oldest shared ancestor(s) indicated in brackets. Paths with two ancestors on top contribute *full* relationships, otherwise the contribution is a *half* relationship.
 
