--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # verbalisr
 
 <!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/verbalisr)](https://CRAN.R-project.org/package=verbalisr)
 <!-- badges: end -->
 
 The purpose of **verbalisr** is to describe pedigree relationships in plain language. This is often helpful in order to understand complex genealogies. Given two members of any pedigree, **verbalisr** spells out the connecting paths between them, using common terminology like *great-grandmother* and *half first cousins*. 
@@ -40,8 +41,8 @@ library(verbalisr)
 Here is an example involving a double-cousin-like relationship:
 
 ```{r fig.keep = "none"}
-x = doubleCousins(degree1 = 1, removal1 = 1, half1 = TRUE,
-                  degree2 = 2, removal2 = 0)
+x = doubleCousins(degree1 = 1, removal1 = 1, half1 = TRUE,  # half first cousins once removed
+                  degree2 = 2, removal2 = 0)                # second cousins
 
 plot(x, hatched = 16:17)
 ```
