--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+  fig.align = "center"
 )
 ```
 
@@ -17,16 +18,23 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/verbalisr)](https://CRAN.R-project.org/package=verbalisr)
+[![](https://cranlogs.r-pkg.org/badges/grand-total/verbalisr?color=yellow)](https://cran.r-project.org/package=verbalisr)
+[![](https://cranlogs.r-pkg.org/badges/last-month/verbalisr?color=yellow)](https://cran.r-project.org/package=verbalisr)
 <!-- badges: end -->
 
 The purpose of **verbalisr** is to describe pedigree relationships in plain language. This is often helpful in order to understand complex genealogies. Given two members of any pedigree, **verbalisr** spells out the connecting paths between them, using common terminology like *great-grandmother* and *half first cousins*. 
 
-**verbalisr** is part of the [ped suite](https://magnusdv.github.io/pedsuite/) framework for pedigree analysis in R. A good place to experiment with **verbalisr** is the online app **QuickPed** for building and analysing pedigrees. Try QuickPed here: <https://magnusdv.shinyapps.io/quickped>.
+To see **verbalisr** in action, check out the interactive app **QuickPed** for building and analysing pedigrees, available online here: <https://magnusdv.shinyapps.io/quickped>.
+
+The **verbalisr** package is part of the [ped suite](https://magnusdv.github.io/pedsuite/) framework for pedigree analysis in R. 
 
 ## Installation
 
-The development version of **verbalisr** can be installed from GitHub with:
-
+To get the current official version of **verbalisr**, install from CRAN as follows:
+```{r, eval = FALSE}
+install.packages("verbalisr")
+```
+Alternatively, the development version can be installed from GitHub with:
 ```{r, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("magnusdv/verbalisr")
@@ -47,7 +55,7 @@ x = doubleCousins(degree1 = 1, removal1 = 1, half1 = TRUE,  # half first cousins
 plot(x, hatched = 16:17)
 ```
 
-```{r dblcous, echo = FALSE, fig.height = 3.5, fig.width = 5, out.width = "60%"}
+```{r dblcous, echo = FALSE, fig.height = 3.7, fig.width = 5.5, out.width = "60%"}
 plot(x, hatched = leaves(x), margin = c(1,1,1,1))
 ```
 
@@ -56,4 +64,22 @@ We apply `verbalise()` to describe the relationship between the children:
 verbalise(x, ids = 16:17)
 ```
 This output shows that 16 and 17 are simultaneous first cousins once removed and second cousins. Below each description follows the corresponding path, with its oldest shared ancestor(s) indicated in brackets. Paths with two ancestors on top contribute *full* relationships, otherwise the contribution is a *half* relationship.
+
+## A bigger example: The royal Habsburg family
+The figure below shows a subset of the (infamously inbred) royal Habsburg family, contained in the built-in dataset `habsburg`.
+Untangling all the loops in this pedigree *by hand* would be a daunting task, making it a good test case for **verbalisr**.
+
+```{r habsburg, fig.width=6, fig.height = 4.5, dpi = 600, out.width = "80%"}
+plot(habsburg, hatched = "Charles II", cex = 0.6, margin = c(1, 1, .1, 1))
+```
+
+The inbreeding coefficient of King Charles II of Spain (the bottom individual) was close to 25%, i.e., similar to a child produced by brother-sister incest. We can check this with the help of **ribd**:
+```{r}
+ribd::inbreeding(habsburg, "Charles II")
+```
+
+The high inbreeding coefficient shows that the parents of Charles II were closely related. But *how* were they related? **verbalisr** gives the answer:
+```{r}
+verbalise(habsburg, ids = c("Philip IV", "Mariana"))
+```
 
