--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ The purpose of **verbalisr** is to describe pedigree relationships in plain lang
 
 To see **verbalisr** in action, check out the interactive app **QuickPed** for building and analysing pedigrees, available online here: <https://magnusdv.shinyapps.io/quickped>.
 
-The algorithm behind **verbalisr** is described in detail in the BMC Bioinformatics paper: [QuickPed: an online tool for drawing pedigrees and analysing relatedness](https://doi.org/10.1186/s12859-022-04759-y) (Vigeland, 2022).
+The algorithm behind **verbalisr** is described in detail in this paper: [QuickPed: an online tool for drawing pedigrees and analysing relatedness](https://doi.org/10.1186/s12859-022-04759-y) (Vigeland, BMC Bioinformatics, 2022).
 
 The **verbalisr** package is part of the [ped suite](https://magnusdv.github.io/pedsuite/) framework for pedigree analysis in R. 
 
